<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2024.
  ~ All rights reserved.
  ~ This file is part of the Workout Tracker App.
  ~ Unauthorized copying and distribution is prohibited.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats_black_24dp"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_workout_icon"
        android:title="@string/title_workout" />

    <item
        android:id="@+id/navigation_history_workout"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/history_title" />

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_exercises_black_24dp"
        android:title="@string/title_exercises" />

</menu>