<!--
  ~ Copyright (c) 2024.
  ~ All rights reserved.
  ~ This file is part of the Workout Tracker App.
  ~ Unauthorized copying and distribution is prohibited.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/done_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/card_border"
                android:layout_margin="8dp">

                <CheckBox android:id="@+id/checkbox_barbell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barbell"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_dumbbell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dumbbell"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_machine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_cable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cable"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_kettle_bell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kettle_bell"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_weight_plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_plate"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_resistance_band"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resistance_band"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_calisthenics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calisthenics"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_type_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:layout_columnWeight="1"/>

            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_part"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/card_border">

                <CheckBox android:id="@+id/checkbox_arms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arms"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_legs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legs"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_chest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chest"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_back"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_full_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_body"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_shoulders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoulders"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_abs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abs"
                    android:layout_columnWeight="1"/>

                <CheckBox android:id="@+id/checkbox_bodypart_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_other"
                    android:layout_columnWeight="1"/>

            </GridLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>
