<!--
  ~ Copyright (c) 2024.
  ~ All rights reserved.
  ~ This file is part of the Workout Tracker App.
  ~ Unauthorized copying and distribution is prohibited.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/premium_0"
        android:textSize="14sp"
        android:textColor="@color/textSecondary"/>

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view"
        android:layout_marginTop="8dp"
        android:text="@string/premium_1"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/lock_and_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_2"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lock_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lock_icon"
            android:src="@drawable/ic_lock"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/text_view_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_2"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/textSecondary"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/many_workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/max_workouts"
        android:src="@mipmap/ic_launcher_configured"
        android:layout_below="@id/lock_and_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_view_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/many_workouts"
        android:layout_marginTop="24dp"
        android:text="@string/premium_3"
        android:textSize="14sp"
        android:textColor="@color/textSecondary"/>

    <TextView
        android:id="@+id/text_view_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_4"
        android:layout_marginTop="8dp"
        android:text="@string/premium_4"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/advanced_visuals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/advanced_visuals"
        android:src="@mipmap/ic_launcher_configured"
        android:layout_below="@id/text_view_5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
