<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2024.
  ~ All rights reserved.
  ~ This file is part of the Workout Tracker App.
  ~ Unauthorized copying and distribution is prohibited.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/verificationText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/verification_sent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unverifiedAccountCreationLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="8dp"
        android:text="@string/create_unverified_account"
        android:gravity="end"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationText" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unverifiedAccountCreationLink"
        app:lottie_rawRes="@raw/verification_email_animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>


    <Button
        android:id="@+id/verifyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/verify"
        app:layout_constraintBottom_toTopOf="@id/resendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1.0" />

    <Button
        android:id="@+id/resendButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification_email"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
